<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCoinName"
            style="@style/CoinNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_2x"
            app:layout_constraintBottom_toBottomOf="@+id/tvCoinPrice"
            app:layout_constraintEnd_toStartOf="@+id/tvCoinPrice"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvCoinPrice"
            style="@style/CoinPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_2x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$1,000,000" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/space_2x"
            android:padding="@dimen/space_1x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCoinPrice" />

        <TextView
            android:id="@+id/textViewErrorChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_1x"
            android:text="@string/label_something_went_wrong"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/chart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chart" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/chart">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_time_filter"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv1h"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_1h" />

                <TextView
                    android:id="@+id/tv24hr"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_24h" />

                <TextView
                    android:id="@+id/tv7d"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_7d" />

                <TextView
                    android:id="@+id/tv1m"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_1m" />

                <TextView
                    android:id="@+id/tv3m"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_3m" />

                <TextView
                    android:id="@+id/tv1y"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_1y" />

                <TextView
                    android:id="@+id/tvAllTime"
                    style="@style/ChartPeriodButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_all_time" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/marketData"
            style="@style/MarketDataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_3x"
            android:layout_marginVertical="@dimen/space_2x"
            android:text="@string/market_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_2x"
            android:layout_marginTop="@dimen/space"
            android:layout_marginBottom="@dimen/space_2x"
            android:background="@drawable/border_market_cap_table"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marketData"
            tools:itemCount="10"
            tools:listitem="@layout/view_holder_market_data_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
